<resources>
    <string name="app_name">Control de Almacen</string>
    <string name="titulo_editar_producto">Editar Producto</string>
    <string name="hint_editar_nombre">Nombre del producto</string>
    <string name="hint_editar_cantidad">Cantidad en stock</string>
    <string name="hint_editar_minimo">Cantidad mínima (Opcional)</string>
    <string name="texto_cambiar_foto">Toca la foto para cambiarla</string>
    <string name="texto_switch_habilitado">Producto Habilitado</string>
    <string name="btn_guardar_edicion">GUARDAR CAMBIOS</string>
    <string name="btn_borrar_producto">BORRAR PRODUCTO</string>
    <string name="desc_foto_producto">Foto del producto a editar</string>
    <string name="titulo_add_proveedor">Añadir Nuevo Proveedor</string>
    <string name="hint_cif">CIF (Obligatorio)</string>
    <string name="hint_nombre_empresa">Nombre de la empresa (Obligatorio)</string>
    <string name="hint_telefono_opcional">Teléfono (Opcional)</string>
    <string name="hint_email_opcional">Correo electrónico (Opcional)</string>
    <string name="btn_guardar_proveedor">GUARDAR PROVEEDOR</string>
    <string name="titulo_proveedores">Gestión de Proveedores</string>
    <string name="titulo_add_albaran">Nuevo Albarán</string>
    <string name="hint_importe">Importe total (€)</string>
    <string name="txt_pagado">¿Albarán pagado?</string>
    <string name="btn_tomar_foto_albaran">FOTOGRAFIAR ALBARÁN</string>
    <string name="btn_guardar_albaran">GUARDAR ALBARÁN</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
</resources>
